--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="kpi"><span class="dot" aria-hidden="true"></span><div><strong>0</strong><div class="muted">pérdida de datos</div></div></div>
         </div>
         <ul class="list" style="margin-top:10px">
-          <li><span class="tag">CV</span><span><a href="./pdf/MarcosMedinaCV.pdf" target="_blank" rel="noopener">Descargar PDF</a></span></li>
+          <li><span class="tag">CV</span><span><a href="pdf/MarcosMedinaCV.pdf" target="_blank" rel="noopener">Descargar PDF</a></span></li>
           <li><span class="tag">LinkedIn</span><span><a href="https://www.linkedin.com/in/mmedinab/" target="_blank" rel="noopener">/in/mmedinab</a></span></li>
           <li><span class="tag">Contacto</span><span><a href="#contacto">marcosmedinabe@gmail.com</a></span></li>
         </ul>
@@ -203,3 +203,4 @@
   </script>
 </body>
 </html>
+
